docs: documentando rotas no swagger
