# controller/hero.go
@@ -24,11 +24,12 @@ func NewHeroController(heroHandler handlers.HeroHandler) HeroController {
 	}
 }
 
-// @Summary			Get Heros
-// @Description		Retorna todos os heróis.
-// @Produce			application/json
-// @Heros			heros
-// @Success			200
+// @Summary			Consultar dados dos heróis.
+// @Description		Consultar dados dos heróis..
+// @Tags 			Hero
+// @Accept 			json
+// @Produce			json
+// @Success			200 {object} model.Hero
 // @Router			/heros [get]
 func (h *HeroController) GetHeros(ctx *gin.Context) {
 	heros, err := h.heroHandler.GetHeros()
@@ -41,6 +42,14 @@ func (h *HeroController) GetHeros(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, heros)
 }
 
+// @Summary			Registrar dados do herói.
+// @Description		Registrar dados do herói.
+// @Tags 			Hero
+// @Accept 			json
+// @Produce			json
+// @Param 			hero body model.Hero true "hero"
+// @Success			201 {object} string
+// @Router			/hero [post]
 func (h *HeroController) CreateHeros(ctx *gin.Context) {
 	var hero model.Hero
 	err := ctx.BindJSON(&hero)
@@ -58,6 +67,14 @@ func (h *HeroController) CreateHeros(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, "Herói cadastrado com sucesso!")
 }
 
+// @Summary			Buscar dados do herói pelo ID.
+// @Description		Buscar dados do herói pelo ID.
+// @Tags 			Hero
+// @Accept 			json
+// @Produce			json
+// @Param 			id path  int true "ID do herói"
+// @Success			200 {object} model.Hero
+// @Router			/hero/{id} [get]
 func (h *HeroController) GetByIdHero(ctx *gin.Context) {
 	id, shouldReturn := CheckId(ctx)
 	if shouldReturn {
@@ -83,6 +100,16 @@ func (h *HeroController) GetByIdHero(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, hero)
 }
 
+
+// @Summary			Atualizar dados do herói.
+// @Description		Atualizar dados do herói.
+// @Tags 			Hero
+// @Accept 			json
+// @Produce			json
+// @Param 			id path  int true "ID do herói"
+// @Param 			hero body model.Hero true "hero"
+// @Success			200 {object} string
+// @Router			/hero/{id} [put]
 func (h *HeroController) UpdateHero(ctx *gin.Context) {
 	var updateHero model.Hero
 	id, shouldReturn := CheckId(ctx)
@@ -105,6 +132,15 @@ func (h *HeroController) UpdateHero(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, "Herói atualizado com sucesso!")
 }
 
+
+// @Summary			Deletar dados do herói.
+// @Description		Deletar dados do herói.
+// @Tags 			Hero
+// @Accept 			json
+// @Produce			json
+// @Param 			id path  int true "ID do herói"
+// @Success			200 {object} string
+// @Router			/hero/{id} [delete]
 func (h *HeroController) DeleteHero(ctx *gin.Context) {
 	id, shouldReturn := CheckId(ctx)
 	if shouldReturn {
